--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: bash
 services:
   - docker
 script: 
-  - docker build -t docker-base-r-packages .
+  - docker build -t keboola/docker-base-r-packages .
 after_success:
   - docker images
 deploy:
